# raze-rule-compatible-check

./: .gitignore  BUILD.bazel  Cargo.toml  WORKSPACE.bazel
.github/workflows/: build.yaml
cargo/: crates.bzl
